syntax ="proto3";

package vehicleDetails;
option java_multiple_files=true;
option java_package="com.gprc.server";
option java_outer_classname="vehicleDetailsProto";

service VehicleDetails{

  // UNARY - RPC -> get vehicle details
  rpc getVehicleDetails(VehicleRequest) returns (VehicleResponse);

  //server streaming
  rpc subscribeVehicle(VehicleRequest) returns (stream VehicleResponse);

}

message VehicleRequest{
  int32 id=1;
}

message VehicleResponse{
  int32 id=1;
  string vehicleNumber=2;
  string vehicleModel=3;
  string vehicleMake=4;
  string vehicleVariant=5;
  bool isBike=6;
}